--- a/Exam/exam_solution.ipynb
+++ b/Exam/exam_solution.ipynb
@@ -61,12 +61,12 @@
         "print(f\"Grayscale pixel value range: {min_value} to {max_value}\")\n"
       ],
       "metadata": {
-        "id": "6EtL0sSs-Qev",
-        "outputId": "fa61bc00-4ca1-480d-c53c-40154190c4d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 595
-        }
+        },
+        "id": "6EtL0sSs-Qev",
+        "outputId": "fa61bc00-4ca1-480d-c53c-40154190c4d6"
       },
       "execution_count": 8,
       "outputs": [
@@ -126,12 +126,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "v-nz4WIF-Vbz",
-        "outputId": "8907ac37-00b2-4718-cde9-4eb4a965b199",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 522
-        }
+        },
+        "id": "v-nz4WIF-Vbz",
+        "outputId": "8907ac37-00b2-4718-cde9-4eb4a965b199"
       },
       "execution_count": 12,
       "outputs": [
@@ -210,12 +210,12 @@
         "plt.savefig('median.png')\n"
       ],
       "metadata": {
-        "id": "wjTIp3Uh-WmU",
-        "outputId": "ac9d63e2-d96e-4224-b4a3-d3bd1d467999",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 879
-        }
+        },
+        "id": "wjTIp3Uh-WmU",
+        "outputId": "ac9d63e2-d96e-4224-b4a3-d3bd1d467999"
       },
       "execution_count": 24,
       "outputs": [
@@ -283,12 +283,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "UKmun8UF-Xi9",
-        "outputId": "6103f4fe-5c87-43a5-e4ad-4ad1ecd49129",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337
-        }
+        },
+        "id": "UKmun8UF-Xi9",
+        "outputId": "6103f4fe-5c87-43a5-e4ad-4ad1ecd49129"
       },
       "execution_count": 26,
       "outputs": [
@@ -366,12 +366,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "fDLle10P-YQv",
-        "outputId": "af137a4f-4c38-4944-8c7f-3acd27379d9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "fDLle10P-YQv",
+        "outputId": "af137a4f-4c38-4944-8c7f-3acd27379d9c"
       },
       "execution_count": 38,
       "outputs": [
@@ -433,11 +433,11 @@
         "#     plt.show()"
       ],
       "metadata": {
-        "id": "8xrkipmx-ZHK",
-        "outputId": "772130dc-b06e-45a0-80cf-15b975fdecb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8xrkipmx-ZHK",
+        "outputId": "772130dc-b06e-45a0-80cf-15b975fdecb5"
       },
       "execution_count": 58,
       "outputs": [
@@ -584,12 +584,12 @@
         "sns.scatterplot(x='axis_major_length',y='area',data=df_features)"
       ],
       "metadata": {
-        "id": "9YifgomZLRZT",
-        "outputId": "e4917a72-93a5-40d6-e634-355222e02381",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 468
-        }
+        },
+        "id": "9YifgomZLRZT",
+        "outputId": "e4917a72-93a5-40d6-e634-355222e02381"
       },
       "execution_count": 63,
       "outputs": [
@@ -632,11 +632,11 @@
         "print('there are {} coins with an area larger area than 1750'.format(N_large))"
       ],
       "metadata": {
-        "id": "KHkVFMky-bjq",
-        "outputId": "ec9e0371-3b8d-416c-82af-670efdfdeb5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KHkVFMky-bjq",
+        "outputId": "ec9e0371-3b8d-416c-82af-670efdfdeb5f"
       },
       "execution_count": 64,
       "outputs": [
@@ -699,12 +699,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "PGhjN0sb-cSw",
-        "outputId": "63981618-ec88-4b42-b8e2-03c60ff829b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        }
+        },
+        "id": "PGhjN0sb-cSw",
+        "outputId": "63981618-ec88-4b42-b8e2-03c60ff829b0"
       },
       "execution_count": 65,
       "outputs": [
@@ -771,12 +771,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "p891xHCm-dOo",
-        "outputId": "23d23e64-8aaf-44cb-b64e-a812ad0e1f5f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 436
-        }
+        },
+        "id": "p891xHCm-dOo",
+        "outputId": "23d23e64-8aaf-44cb-b64e-a812ad0e1f5f"
       },
       "execution_count": 71,
       "outputs": [
@@ -889,14 +889,14 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "xR1JLoYK-eRC",
-        "outputId": "2d7c11cb-4cc8-48d4-af13-9e9657d4e290",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
-        }
+          "height": 339
+        },
+        "id": "xR1JLoYK-eRC",
+        "outputId": "3c3c3382-0105-42fb-a6a1-216214c5ecad"
       },
-      "execution_count": 73,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "error",
@@ -905,9 +905,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-73-bfb7f4698109>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mhomogeneity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraycoprops\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglcm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'homogeneity'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0menergy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraycoprops\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglcm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'energy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \u001b[0mcorrelation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraycoprops\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglcm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'correlation'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     blob_properties.append({\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/skimage/feature/texture.py\u001b[0m in \u001b[0;36mgraycoprops\u001b[0;34m(P, prop)\u001b[0m\n\u001b[1;32m    259\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    260\u001b[0m     \u001b[0;31m# create weights for specified property\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 261\u001b[0;31m     \u001b[0mI\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mJ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mogrid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mnum_level\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mnum_level\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    262\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mprop\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'contrast'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    263\u001b[0m         \u001b[0mweights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mI\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mJ\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/numpy/lib/_index_tricks_impl.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    183\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mstep\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    184\u001b[0m                         \u001b[0mstep\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mkk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstep\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 185\u001b[0;31m                 \u001b[0mnn\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    186\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msparse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m                 \u001b[0mslobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0m_nx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnewaxis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-74-bfb7f4698109>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mhomogeneity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraycoprops\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglcm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'homogeneity'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0menergy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraycoprops\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglcm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'energy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \u001b[0mcorrelation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraycoprops\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglcm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'correlation'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     blob_properties.append({\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/skimage/feature/texture.py\u001b[0m in \u001b[0;36mgraycoprops\u001b[0;34m(P, prop)\u001b[0m\n\u001b[1;32m    293\u001b[0m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_dist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_angle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    294\u001b[0m         \u001b[0mI\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_level\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_level\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 295\u001b[0;31m         \u001b[0mJ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_level\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_level\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    296\u001b[0m         \u001b[0mdiff_i\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mI\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    297\u001b[0m         \u001b[0mdiff_j\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mJ\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mJ\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
